fixed some swiper z-index mistake, added hover effects

--- a/src/styles/blocks/experiance-card.scss
+++ b/src/styles/blocks/experiance-card.scss
@@ -17,13 +17,15 @@
     /* 32px @ 640px increasing to 40px @ 1024px */
     margin-bottom: 32px;
     border-radius: getColor(experiance-card-image-border-radius);
+    transition: transform getColor(transition-time);
+
+    &:hover {
+      transform: scale(1.04);
+    }
+
     @include onTablet {
       margin-bottom: clamp(32px, calc(2rem + ((1vw - 6.4px) * 2.08)), 40px);
       transition: transform getColor(transition-time);
-
-      &:hover {
-        transform: scale(1.05);
-      }
     }
   }
 
