--- a/src/styles/blocks/service-card.scss
+++ b/src/styles/blocks/service-card.scss
@@ -2,7 +2,8 @@
   background-color: getColor(section-bgc);
   border-radius: 24px;
   padding: 32px 32px 28px;
-  transition: transform getColor(transition-time);
+  transition: transform getColor(transition-time),
+    box-shadow getColor(transition-time);
 
   @include onTablet {
     max-width: 264px;
