--- a/src/styles/blocks/services.scss
+++ b/src/styles/blocks/services.scss
@@ -10,6 +10,10 @@
   &__item {
     grid-column: 1 / 3;
 
+    &:hover {
+      transform: scale(1.04);
+    }
+
     @include onTablet {
       grid-column: 1 / 4;
       
@@ -19,7 +23,7 @@
         transform: translateY(-132px);
 
         &:hover {
-          transform: translateY(-132px);
+          transform: translateY(-132px) scale(1.04);
         }
       }
     }
