--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -67,11 +67,11 @@
     position: absolute;
     bottom: clamp(24px, calc(1.5rem + ((1vw - 3.2px) * 2.5)), 32px);
     left: clamp(20px, calc(1.25rem + ((1vw - 3.2px) * 6.56)), 41px);
+    z-index: 1;
 
     @include onTablet {
       bottom: clamp(32px, calc(2rem + ((1vw - 6.4px) * 4.16)), 48px);
       left: clamp(41px, calc(2.56rem + ((1vw - 6.4px) * 9.63)), 78px);
-      z-index: 1;
     }
 
     @include onDesktop {
@@ -102,28 +102,7 @@
     cursor: pointer;
 
     &:hover {
-      animation: 0.3s ease-in-out infinite button-shaking;
-    }
-
-    @keyframes button-shaking {
-      0% {
-        transform: rotate(0) scale(1);
-      }
-
-      25% {
-        transform: rotate(5deg);
-      }
-      50% {
-        transform: rotate(0);
-      }
-
-      75% {
-        transform: rotate(-5deg);
-      }
-
-      100% {
-        transform: rotate(0deg);
-      }
+      border: 1px solid getColor(button-hover-bgc);
     }
   }
 
